# Open_Data_QnA

./: .gitignore  README.md  config.ini  opendataqna.py  pyproject.toml
agents/: VisualizeAgent.py  core.py
notebooks/: 0_CopyDataToBigQuery.ipynb  0_CopyDataToCloudSqlPG.ipynb  1_Setup_OpenDataQnA.ipynb  2_Run_OpenDataQnA.ipynb  3_LoadKnownGoodSQL.ipynb
scripts/: data_source_list.csv  save_config.py
utilities/: __init__.py
