[project]
name = "opendataqna"
version = "0.1.0"
description = ""
authors = [
    { name = "msubasioglu" },
    { name = "l-sri" },
    { name = "orpzs" },
]
requires-python = "!=3.9.7,~=3.9"
readme = "README.md"
license = { text = "Apache 2.0" }
dependencies = [
    "google<4.0.0,>=3.0.0",
    "google-api-python-client<3.0.0,>=2.120.0",
    "google-cloud<1.0.0,>=0.34.0",
    "google-cloud-aiplatform<2.0.0,>=1.43.0",
    "pandas<3.0.0,>=2.2.1",
    "pandas-gbq<1.0.0,>=0.21.0",
    "cloud-sql-python-connector[asyncpg]<2.0.0,>=1.7.0",
    "sqlalchemy<3.0.0,>=2.0.27",
    "pgvector<1.0.0,>=0.2.5",
    "pg8000<2.0.0,>=1.30.5",
    "tabulate<1.0.0,>=0.9.0",
    "langchain<1.0.0,>=0.1.9",
    "fsspec<2025.0.0,>=2024.2.0",
    "gcsfs<2025.0.0,>=2024.2.0",
    "streamlit<2.0.0,>=1.32.2",
    "google-cloud-bigquery<4.0.0,>=3.17.2",
    "google-cloud-bigquery-connection<2.0.0,>=1.15.3",
    "pyarrow<16.0.0,>=15.0.2",
    "Flask[async]<3.0.0,>=2.1.0",
    "gunicorn<21.0.0,>=20.1.0",
    "flask-cors<5.0.0,>=4.0.0",
    "Werkzeug<3.0.0,>=2.3.7",
    "google-cloud-firestore<3.0.0,>=2.16.0",
    "firebase-admin<6.0.0,>=5.2.0",
    "langchain_community",
]

[dependency-groups]
dev = [
    "pyzmq<26.0.0",
    "ipykernel>=6.29.3,<7",
]

[tool.pdm.dev-dependencies]
dev = [
    "pyzmq<26.0.0",
    "ipykernel<7.0.0,>=6.29.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
